--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -11,3 +11,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 filebuffer = "0.4"
 unicode-segmentation = "1.7.1"
+rand = "0.5.0"
+encoding = "0.2.33"
