--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ edition = "2018"
 lib = { path = "lib" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-fuzzyhash = "0.2.1"
+varuint = "0.6"
 
